Fix overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     font-size: 15px;
     line-height: 1.6;
     color: #333;
